--- a/prototypes/app/styl/components/CardsDeck.styl
+++ b/prototypes/app/styl/components/CardsDeck.styl
@@ -53,8 +53,9 @@
     &.CardsDeck--dotsSlider {
     
         $gapWidth = 25px;
+        $dotsReservedHeight = 30px;
     
-        padding: $verticalGap $gapWidth;
+        padding: $verticalGap $gapWidth $dotsReservedHeight $gapWidth;
         position: relative;
         min-height: 100%;
     
